examples/test/testpolicy18336.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18336
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key27: value45
      key43: value7
      key31: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value18
      podSelector:
        matchLabels:
          key7: value41
          key4: value10
